--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "activationEvents": [
     "onCommand:workbench.action.tasks.runTask"
   ],
-  "main": "./out/extension.js",
+  "main": "./build/extension.js",
   "contributes": {
     "commands": [
       {
