--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "make",
-  "publisher": "cgomes",
+  "publisher": "carlos-algms",
   "displayName": "Makefile support for VS Code",
   "description": "Extension to add Makefile capabilities to VS Code.",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/carlos-algms/makefile-support-for-vscode.git"
+  },
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.50.0"
