--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "main": "./build/extension.js",
   "activationEvents": [
-    "onCommand:workbench.action.tasks.runTask"
+    "onCommand:workbench.action.tasks.runTask",
+    "onCommand:make.runTarget"
   ],
   "contributes": {
     "taskDefinitions": [
@@ -27,6 +28,12 @@
             "description": "The make target name to run. Must exist in your Makefile"
           }
         }
+      }
+    ],
+    "commands": [
+      {
+        "command": "make.runTarget",
+        "title": "Make: Run target"
       }
     ]
   },
