--- a/package.json
+++ b/package.json
@@ -56,6 +56,9 @@
     "pretest": "yarn run compile && yarn run lint",
     "test": "node ./build/test/runTest.js"
   },
+  "dependencies": {
+    "vscode-nls": "^5.0.0"
+  },
   "devDependencies": {
     "@types/glob": "^7.1.3",
     "@types/mocha": "^8.0.3",
@@ -67,7 +70,6 @@
     "glob": "^7.1.6",
     "mocha": "^8.2.0",
     "typescript": "^4.0.3",
-    "vscode-nls": "^5.0.0",
     "vscode-test": "^1.4.0"
   },
   "engines": {
