--- a/package.json
+++ b/package.json
@@ -67,8 +67,11 @@
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
     "eslint": "^7.11.0",
+    "eslint-config-prettier": "^6.14.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "glob": "^7.1.6",
     "mocha": "^8.2.0",
+    "prettier": "^2.1.2",
     "typescript": "^4.0.3",
     "vscode-test": "^1.4.0"
   },
