--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,19 +2,29 @@
   "root": true,
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "ecmaVersion": 6,
+    "ecmaVersion": 2019,
     "sourceType": "module",
     "project": ["./tsconfig.json"]
   },
+  "plugins": ["prettier", "@typescript-eslint"],
   "extends": [
-    "eslint:recommended",
+    "airbnb-base",
     "plugin:@typescript-eslint/recommended",
     "plugin:prettier/recommended",
+    "plugin:import/typescript",
     "prettier/@typescript-eslint"
   ],
-  "plugins": ["@typescript-eslint", "prettier"],
+  "settings": {
+    "import/core-modules": ["vscode"]
+  },
+  "ignorePatterns": ["node_modules/", "lib/", "public/", "build/", "dist/"],
   "rules": {
+    "prettier/prettier": "error",
     "prefer-const": "warn",
+    "no-restricted-syntax": "off",
+    "prefer-promise-reject-errors": "off",
+    "import/extensions": "off",
+    "import/prefer-default-export": "off",
     "@typescript-eslint/naming-convention": "warn",
     "@typescript-eslint/semi": "warn",
     "@typescript-eslint/no-explicit-any": "off",
