Exclude build folder

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,5 @@
     "newLine": "lf",
     "removeComments": false
   },
-  "exclude": ["node_modules", ".vscode-test"]
+  "exclude": ["node_modules", ".vscode-test", "build"]
 }
