Included changelog generation

--- a/package.json
+++ b/package.json
@@ -54,7 +54,9 @@
     "lint": "eslint src",
     "watch": "tsc -watch -p ./",
     "pretest": "yarn run compile && yarn run lint",
-    "test": "node ./build/test/runTest.js"
+    "test": "node ./build/test/runTest.js",
+    "changelog": "conventional-changelog --infile CHANGELOG.md --same-file -r 0",
+    "version": "yarn run changelog"
   },
   "dependencies": {
     "vscode-nls": "^5.0.0"
