--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,17 +8,23 @@
   },
   "plugins": ["prettier", "@typescript-eslint"],
   "extends": [
+    "eslint:recommended",
     "airbnb-base",
+    "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended",
+    "plugin:@typescript-eslint/recommended-requiring-type-checking",
     "plugin:prettier/recommended",
     "plugin:import/typescript",
-    "prettier/@typescript-eslint"
+    "prettier/@typescript-eslint",
+    "prettier/react"
   ],
   "settings": {
     "import/core-modules": ["vscode"]
   },
   "ignorePatterns": ["node_modules/", "lib/", "public/", "build/", "dist/"],
   "rules": {
+    "no-console": "off",
+    "no-void": "off",
     "prettier/prettier": "error",
     "prefer-const": "warn",
     "no-restricted-syntax": "off",
@@ -34,6 +40,7 @@
     "@typescript-eslint/prefer-optional-chain": "error",
     "@typescript-eslint/prefer-reduce-type-parameter": "error",
     "@typescript-eslint/prefer-string-starts-ends-with": "error",
-    "@typescript-eslint/type-annotation-spacing": "error"
+    "@typescript-eslint/type-annotation-spacing": "error",
+    "@typescript-eslint/no-floating-promises": "off"
   }
 }
