Refactored Task Provider to more functional style

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,12 +23,14 @@
   },
   "ignorePatterns": ["node_modules/", "lib/", "public/", "build/", "dist/"],
   "rules": {
+    "class-methods-use-this": "off",
     "no-console": "off",
     "no-void": "off",
     "prettier/prettier": "error",
     "prefer-const": "warn",
     "no-restricted-syntax": "off",
     "prefer-promise-reject-errors": "off",
+    "no-use-before-define": ["error", { "functions": false, "classes": true }],
     "import/extensions": "off",
     "import/prefer-default-export": "off",
     "@typescript-eslint/naming-convention": "warn",
