Refactored Tree View to show tasks from tasks.json

--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
       {
         "command": "make-task-provider.openMakefile",
         "title": "Open file",
-        "icon": "$(makefile)"
+        "icon": "$(link-external)"
       },
       {
         "command": "make-task-provider.refresh",
@@ -90,12 +90,27 @@
         {
           "command": "make-task-provider.openMakefile",
           "when": "view == make && viewItem == Makefile",
-          "group": "navigation@1"
+          "group": "navigation"
         },
         {
           "command": "make-task-provider.runTargetFromTreeView",
           "when": "view == make && viewItem == MakefileTarget",
           "group": "inline"
+        },
+        {
+          "command": "make-task-provider.openMakefile",
+          "when": "view == make && viewItem == MakefileTarget",
+          "group": "inline"
+        },
+        {
+          "command": "make-task-provider.runTargetFromTreeView",
+          "when": "view == make && viewItem == MakefileTarget",
+          "group": "navigation@1"
+        },
+        {
+          "command": "make-task-provider.openMakefile",
+          "when": "view == make && viewItem == MakefileTarget",
+          "group": "navigation@2"
         }
       ]
     },
