--- a/package.json
+++ b/package.json
@@ -143,9 +143,9 @@
   },
   "devDependencies": {
     "@types/glob": "^7.1.3",
-    "@types/mocha": "^8.0.3",
-    "@types/node": "^12.12.69",
-    "@types/vscode": "^1.50.0",
+    "@types/mocha": "^8.2.0",
+    "@types/node": "~14",
+    "@types/vscode": "^1.52.0",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
     "eslint": "^7.18.0",
@@ -154,10 +154,10 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
     "glob": "^7.1.6",
-    "mocha": "^8.2.0",
+    "mocha": "^8.2.1",
     "prettier": "^2.2.1",
-    "typescript": "^4.0.3",
-    "vscode-test": "^1.4.0"
+    "typescript": "^4.1.3",
+    "vscode-test": "^1.5.0"
   },
   "engines": {
     "vscode": "^1.50.0"
