--- a/package.json
+++ b/package.json
@@ -145,7 +145,7 @@
     "@types/glob": "^7.1.3",
     "@types/mocha": "^8.2.0",
     "@types/node": "~14",
-    "@types/vscode": "~1.50.0",
+    "@types/vscode": "^1.50.0",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
     "eslint": "^7.18.0",
@@ -160,7 +160,7 @@
     "vscode-test": "^1.5.0"
   },
   "engines": {
-    "vscode": "~1.50.0"
+    "vscode": "^1.50.0"
   },
   "categories": [
     "Other"
