--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,12 +1,16 @@
+.temp
 .vscode/**
+node_modules
 .vscode-test/**
 build/test/**
 src/**
-.gitignore
-.yarnrc
 vsc-extension-quickstart.md
-**/tsconfig.json
+**/tsconfig.*
 **/.eslintrc.json
-**/*.map
 **/*.ts
 Makefile
+*.config.js
+images
+!images/Makefile.png
+**/.*
+*.lock
