--- a/package.json
+++ b/package.json
@@ -141,6 +141,7 @@
   "dependencies": {},
   "devDependencies": {
     "@amplitude/node": "^1.2.0",
+    "@sentry/node": "^6.0.2",
     "@types/glob": "^7.1.3",
     "@types/mocha": "^8.2.0",
     "@types/node": "~14",
