--- a/package.json
+++ b/package.json
@@ -182,6 +182,7 @@
     "@types/vscode": "^1.50.0",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
+    "@vscode/test-electron": "^1.6.2",
     "esbuild": "^0.8.36",
     "eslint": "^7.18.0",
     "eslint-config-airbnb-base": "^14.2.1",
@@ -194,8 +195,7 @@
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
     "typescript": "^4.1.3",
-    "vscode-extension-analytics": "^0.0.4",
-    "vscode-test": "^1.5.0"
+    "vscode-extension-analytics": "^0.0.4"
   },
   "engines": {
     "vscode": "^1.50.0"
