Basic Jest setup from CLI

--- a/package.json
+++ b/package.json
@@ -166,8 +166,9 @@
     "compile:prod": "yarn run compile --minify --define:process.env.NODE_ENV=\\\"production\\\"",
     "lint": "yarn type-check && eslint src",
     "watch": "nodemon --watch src -e ts --exec \"yarn compile\" ",
-    "pretest": "yarn run compile && yarn run lint",
-    "test": "node ./build/test/runTest.js",
+    "test": "node .temp/test/test/runTest.js",
+    "pretest": "rm -rf .temp/test && yarn compile:test",
+    "compile:test": "esbuild `find ./src -name '*.ts'` --sourcemap --platform=node --target=node14 --format=cjs --outdir='.temp/test' ",
     "changelog": "npx conventional-changelog-cli --infile CHANGELOG.md --same-file",
     "version": "yarn run changelog && git add CHANGELOG.md",
     "type-check": "tsc --noEmit -p ./"
@@ -177,7 +178,7 @@
     "@amplitude/node": "^1.2.0",
     "@sentry/node": "^6.0.2",
     "@types/glob": "^7.1.3",
-    "@types/mocha": "^8.2.0",
+    "@types/jest": "^27.0.1",
     "@types/node": "~14",
     "@types/vscode": "^1.50.0",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
@@ -190,7 +191,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
     "glob": "^7.1.6",
-    "mocha": "^8.2.1",
+    "jest": "^27.0.6",
     "node-machine-id": "^1.1.12",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
