--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,7 +8,9 @@
       "script": "watch",
       "problemMatcher": {
         "owner": "custom",
-        "pattern": { "regexp": "__________" },
+        "pattern": {
+          "regexp": "__________"
+        },
         "background": {
           "activeOnStart": true,
           "beginsPattern": "restarting due to changes",
@@ -23,6 +25,14 @@
         "kind": "build",
         "isDefault": true
       }
+    },
+    {
+      "type": "npm",
+      "script": "compile:test",
+      "group": "build",
+      "problemMatcher": [],
+      "label": "npm: compile:test",
+      "detail": "esbuild `find ./src -name '*.ts'` --sourcemap --platform=node --target=node14 --format=cjs --outdir='.temp/test' "
     }
   ]
 }
