--- a/package.json
+++ b/package.json
@@ -169,7 +169,7 @@
     "watch": "nodemon --watch src -e ts --exec \"yarn compile\" ",
     "test": "node .temp/test/test/runTest.js",
     "pretest": "rm -rf .temp/test && yarn compile:test",
-    "compile:test": "yarn compile_base `find ./src -name '*.ts'` --outdir='.temp/test' --define:process.env.NODE_ENV=\\\"test\\\" --define:process.env.PROJECT_FOLDER=\\\"`pwd`\\\"",
+    "compile:test": "yarn compile_base `find ./src -name '*.ts'` --outdir='.temp/test' --define:process.env.NODE_ENV=\\\"test\\\"",
     "changelog": "npx conventional-changelog-cli --infile CHANGELOG.md --same-file",
     "version": "yarn run changelog && git add CHANGELOG.md",
     "type-check": "tsc --noEmit -p ./"
@@ -178,13 +178,17 @@
   "devDependencies": {
     "@amplitude/node": "^1.2.0",
     "@sentry/node": "^6.0.2",
+    "@types/chai": "^4.2.21",
+    "@types/chai-as-promised": "^7.1.4",
     "@types/glob": "^7.1.3",
-    "@types/jest": "^27.0.1",
+    "@types/mocha": "^9.0.0",
     "@types/node": "~14",
     "@types/vscode": "^1.50.0",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
     "@vscode/test-electron": "^1.6.2",
+    "chai": "^4.3.4",
+    "chai-as-promised": "^7.1.1",
     "esbuild": "^0.8.36",
     "eslint": "^7.18.0",
     "eslint-config-airbnb-base": "^14.2.1",
@@ -192,11 +196,13 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
     "glob": "^7.1.6",
-    "jest": "^27.0.6",
+    "mocha": "^9.0.3",
     "node-machine-id": "^1.1.12",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
+    "tap": "^15.0.9",
     "typescript": "^4.1.3",
+    "util.promisify": "^1.1.1",
     "vscode-extension-analytics": "^0.0.4"
   },
   "engines": {
