--- a/package.json
+++ b/package.json
@@ -168,7 +168,7 @@
     "lint": "yarn type-check && eslint src",
     "watch": "nodemon --watch src -e ts --exec \"yarn compile\" ",
     "test": "node .temp/test/test/runTest.js",
-    "pretest": "rm -rf .temp/test && yarn compile:test",
+    "pretest": "rm -rf .temp/test && yarn compile:test && cp package.json .temp/",
     "compile:test": "yarn compile_base `find ./src -name '*.ts'` --outdir='.temp/test' --define:process.env.NODE_ENV=\\\"test\\\"",
     "changelog": "npx conventional-changelog-cli --infile CHANGELOG.md --same-file",
     "version": "yarn run changelog && git add CHANGELOG.md",
@@ -183,6 +183,8 @@
     "@types/glob": "^7.1.3",
     "@types/mocha": "^9.0.0",
     "@types/node": "~14",
+    "@types/sinon": "^10.0.2",
+    "@types/sinon-chai": "^3.2.5",
     "@types/vscode": "^1.50.0",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
@@ -200,6 +202,8 @@
     "node-machine-id": "^1.1.12",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
+    "sinon": "^11.1.2",
+    "sinon-chai": "^3.7.0",
     "tap": "^15.0.9",
     "typescript": "^4.1.3",
     "util.promisify": "^1.1.1",
