--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,12 +12,11 @@
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "alwaysStrict": true,
-    "noImplicitAny": true,
     "noImplicitReturns": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "forceConsistentCasingInFileNames": true,
-    "downlevelIteration": true,
+    "downlevelIteration": false,
     "newLine": "lf",
     "removeComments": false,
     "resolveJsonModule": true
