--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,7 +26,7 @@
   "settings": {
     "import/core-modules": ["vscode"]
   },
-  "ignorePatterns": ["node_modules/", "lib/", "public/", "build/", "dist/", ".temp"],
+  "ignorePatterns": ["node_modules/", "lib/", "public/", "build/", "dist/", ".temp", ".vscode-test"],
   "rules": {
     "class-methods-use-this": "off",
     "no-console": "off",
