--- a/src/test/examples/case-1/Makefile
+++ b/src/test/examples/case-1/Makefile
@@ -8,3 +8,7 @@ test:
 	echo "test command"
 
 .PHONY: test build
+
+var_1 := "variable test 1"
+var_2 ::= "variable posix"
+var_3 ?= "optional variable"
