--- a/src/test/examples/case-1/Makefile
+++ b/src/test/examples/case-1/Makefile
@@ -1,13 +1,14 @@
 CC = gcc
 foo: foo.o
 
+.PHONY: build
 build:
 	echo "build process"
 
 test:
 	echo "test command"
 
-.PHONY: test build
+.PHONY: test
 
 var_1 := "variable test 1"
 var_2 ::= "variable posix"
